--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -3,9 +3,13 @@
 <%= form_for @song  do |f| %>
   <%= f.label :title %>
   <%= f.text_field :title %>
+  <%= f.text_field :artist_name %>
+  <%= f.collection_select :genre_id, Genre.all, :id, :name %>
+  <input name="song[notes][]" id="song_notes_attributes_0_content">
+  <input name="song[notes][]" id="song_notes_attributes_1_content">
+
+
   <br />
 
   <%= f.submit %>
 <% end %>
-
-
