--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,3 +1,11 @@
 <h1>Songs#show</h1>
 
 Title: <%= @song.title %>
+
+<%= @song.artist.name %>
+
+<%if @notes!= nil %>
+<% @notes.each do |note| %>
+    <%= note.content %>
+    <%end%>
+<%end%>
