--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -5,6 +5,19 @@
   <%= f.text_field :title %>
   <br />
 
+  <%= f.label :artist_name, "Artist's Name"%>
+  <%= f.text_field :artist_name %>
+  <br>
+
+  <%= f.label "Select Genre" %>
+  <%= f.select :genre_id, options_from_collection_for_select(Genre.all, "id", "name") %>
+  <br>
+
+  <%= f.fields_for :notes do |notes_form|%>
+    <%= notes_form.label :note %>
+    <%= notes_form.text_area :content, rows: 5, cols: 50 %>
+  <% end %>
+  <br>
   <%= f.submit %>
 <% end %>
 
