--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -5,7 +5,16 @@
   <%= f.text_field :title %>
   <br />
 
+  <%= f.label :artist_name%>
+  <%= f.text_field :artist_name  %>
+  <br />
+
+  <%=f.collection_select(:genre_id, Genre.all, :id, :name) %>
+  <br />
+
+  <%= f.label :notes %>
+  <input name='song[note_attributes][][content]' id='song_notes_1'>
+  <input name='song[note_attributes][][content]' id='song_notes_2'>
+
   <%= f.submit %>
 <% end %>
-
-
