--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -2,10 +2,26 @@
 
 <%= form_for @song  do |f| %>
   <%= f.label :title %>
-  <%= f.text_field :title %>
-  <br />
+  <%= f.text_field :title %><br>
+  <%= f.label :artist_name %>
+  <%= f.text_field :artist_name %><br>
 
+  <%= f.collection_select :genre_id, Genre.all, :id, :name %><br>
+
+ 
+  <%= f.label "Song" %>
+  <%= f.fields_for :notes do |note|  %>
+    <%= note.label "Note" %>
+    <%= note.text_area :content %>
+  <% end %>
+  <%= f.label "Song" %>
+  <%= f.fields_for :notes do |note|  %>
+    <%= note.label "Note" %>
+    <%= note.text_area :content %>
+  <% end %>
+  
   <%= f.submit %>
 <% end %>
+
 
 
